tdf#163736 - sc: fix searchmode cached values for lookup functions

Check the search mode option in cache for lookup functions, because
different search modes can produce different results.

Change-Id: I6127a644dc4eae6fad909a6bc83bde2c66e85201
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175972
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins