sc/source/core/tool/interpr1.cxx
@@ -12159,7 +12159,7 @@ bool ScInterpreter::LookupQueryWithCache( ScAddress & o_rResultPos,
         ScRange aLookupRange( rParam.nCol1, rParam.nRow1, rParam.nTab,
                 rParam.nCol2, rParam.nRow2, rParam.nTab);
         ScLookupCache& rCache = mrDoc.GetLookupCache( aLookupRange, &mrContext );
-        ScLookupCache::QueryCriteria aCriteria( rEntry );
+        ScLookupCache::QueryCriteria aCriteria( rEntry, nSearchMode);
         ScLookupCache::Result eCacheResult = rCache.lookup( o_rResultPos,
                 aCriteria, aPos);
 
